--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==2.0.1
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+flask-migrate==3.1.0
 greenlet==1.1.0
 idna==3.2
 itsdangerous==2.0.1
